#89  prevent card stretching

--- a/src/app/preview/components/home/home.component.scss
+++ b/src/app/preview/components/home/home.component.scss
@@ -8,7 +8,7 @@
     width: 100%;
   }
 
-  .tabs-container{
+  .tabs-container {
     width: 80%;
     margin: 50px 0;
     box-shadow: 0 5px 20px 5px rgba(0, 0, 0, 0.09);
@@ -17,12 +17,13 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      background: hsla(0,0%,93.3%,.31);
+      background: hsla(0, 0%, 93.3%, 0.31);
       padding-top: 25px;
-
 
       .card-box {
         flex: 1 1 30%;
+        max-width: 400px;
+        width: 30%;
         margin: 20px;
         display: flex;
 
@@ -34,7 +35,7 @@
       }
     }
 
-    &.mat-card{
+    &.mat-card {
       padding: 0;
     }
   }
